test/semantic_errors/invalid_return7.mc
bool foo() { 
    return false;
}

int main() {
    return foo(); /* foo returns boolean, not int */
}